--- a/package.json
+++ b/package.json
@@ -1,41 +1,86 @@
 {
-  "name": "webapp",
+  "name": "react-redux",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
-  "scripts": {
-    "start": "webpack-dev-server --mode development --progress --colors --config ./webpack.config.js",
-    "build": "NODE_ENV=production webpack -p --mode production --progress --colors --config ./webpack.prod.config.js",
-    "dev": "concurrently \"npm start\" \"npm run client\""
-  },
+  "main": "index.js",
   "author": "",
   "license": "MIT",
-  "dependencies": {
-    "antd": "^3.4.0",
-    "concurrently": "^3.5.1",
-    "express": "^4.16.3",
-    "material-ui": "^1.0.0-beta.40",
-    "mongodb": "^3.0.5",
-    "react": "^16.3.0",
-    "react-dom": "^16.3.0"
-  },
   "engines": {
     "node": "8.9.4"
   },
+  "scripts": {
+    "client-dev": "webpack-dev-server --mode development --progress --colors --config ./config/webpack.config.dev.js",
+    "build": "NODE_ENV=production webpack -p --mode production --progress --colors --config ./config/webpack.config.prod.js",
+    "server": "json-server --watch db.json",
+    "start": "concurrently \"npm run server\" \"npm run client-dev\"",
+    "test": "jest --watchAll",
+    "test:e2e": "cypress run --browser chrome",
+    "cy:open": "cypress open",
+    "open:coverage": "google-chrome .coverage/lcov-report/index.html"
+  },
+  "dependencies": {
+    "json-server": "^0.14.2",
+    "react": "^16.8.0",
+    "react-dom": "^16.8.0",
+    "react-redux": "^7.1.0",
+    "react-router-dom": "^5.0.1",
+    "react-spinkit": "^3.0.0",
+    "redux": "^4.0.4",
+    "redux-thunk": "^2.3.0"
+  },
   "devDependencies": {
-    "babel-core": "^6.26.0",
+    "@babel/core": "^7.4.5",
+    "@babel/plugin-proposal-class-properties": "^7.4.4",
+    "@babel/polyfill": "^7.4.4",
+    "@babel/preset-env": "^7.4.5",
+    "@babel/preset-react": "^7.0.0",
+    "autoprefixer": "^9.6.0",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-eslint": "^10.0.1",
+    "babel-jest": "^24.8.0",
     "babel-loader": "^7.1.4",
     "babel-polyfill": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "compression-webpack-plugin": "^1.1.11",
+    "concurrently": "^3.6.1",
     "css-loader": "^0.28.11",
+    "cypress": "^3.3.1",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.14.0",
+    "enzyme-to-json": "^3.3.5",
+    "eslint": "^5.16.0",
+    "eslint-config-standard-jsx": "^6.0.2",
+    "eslint-plugin-prettier": "^3.1.0",
+    "eslint-plugin-react": "^7.13.0",
     "html-webpack-plugin": "^3.1.0",
-    "react-hot-loader": "^4.0.1",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^24.8.0",
+    "jest-css-modules": "^2.1.0",
+    "jest-fetch-mock": "^2.1.2",
+    "jest-transform-css": "^2.0.0",
+    "json-server": "^0.15.0",
+    "node-sass": "^4.12.0",
+    "postcss-flexbugs-fixes": "^4.1.0",
+    "postcss-loader": "^3.0.0",
+    "react-hot-loader": "^4.11.0",
+    "react-test-renderer": "^16.8.6",
+    "sass-loader": "^7.1.0",
     "style-loader": "^0.20.3",
     "uglifyjs-webpack-plugin": "^1.2.4",
     "webpack": "^4.4.1",
-    "webpack-cli": "^2.0.13",
-    "webpack-dev-server": "^3.1.1"
+    "webpack-cli": "^3.3.6",
+    "webpack-dev-server": "^3.7.2"
+  },
+  "browserslist": [
+    "last 1 version",
+    "> 1%",
+    "maintained node versions",
+    "not dead"
+  ],
+  "jest": {
+    "moduleNameMapper": {
+      "\\.(css|less|scss|sss|styl)$": "<rootDir>/node_modules/jest-css-modules"
+    }
   }
 }
